--- a/index.html
+++ b/index.html
@@ -1,21 +1,49 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>Let’s roll a movie!</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="script.js" defer></script>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>IMDb Top 250 Movie Recommender</title>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Let’s roll!</h1>
-  <button id="rollBtn">🎲 Pick a Random Movie</button>
+    <div class="container">
+        <div class="welcome">
+            <h1>IMDb Top 250 Movie Recommender</h1>
+            <p>Нажми кнопку, чтобы получить случайный фильм из коллекции IMDb Top 250</p>
+        </div>
+        
+        <div class="movie-container">
+            <div class="movie-card" id="movieCard">
+                <div class="poster-container">
+                    <img src="" alt="Movie Poster" class="poster" id="moviePoster">
+                </div>
+                <div class="movie-info">
+                    <h2 class="movie-title" id="movieTitle"></h2>
+                    <div class="movie-meta">
+                        <span id="movieYear"></span>
+                        <span class="movie-rating">
+                            <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M8 1L10.1 5.3L15 6.1L11.5 9.4L12.4 14.3L8 12L3.6 14.3L4.5 9.4L1 6.1L5.9 5.3L8 1Z" fill="currentColor"/>
+                            </svg>
+                            <span id="movieRating"></span>
+                        </span>
+                    </div>
+                    <p class="movie-overview" id="movieOverview"></p>
+                </div>
+            </div>
+            <div class="loading" id="loading">
+                <div class="spinner"></div>
+                <p>Загрузка фильма...</p>
+            </div>
+            <div class="error-message" id="errorMessage" style="display: none;"></div>
+        </div>
+        
+        <button class="button" id="rollButton">Let's Roll!</button>
+    </div>
 
-  <div id="result" style="display: none;">
-    <h2 id="movieTitle"></h2>
-    <img id="poster" src="" alt="Movie poster" style="max-width: 100%; border-radius: 10px;">
-    <p id="overview"></p>
-  </div>
+    <script src="script.js"></script>
 </body>
 </html>
