--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IMDb Top 250 Movie Recommender</title>
+    <!-- Подключаем Telegram Web App API -->
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -44,6 +44,7 @@
         <button class="button" id="rollButton">Let's Roll!</button>
     </div>
 
-    <script src="script.js"></script>
+    <!-- Убедимся, что скрипт загружается после DOM -->
+    <script src="script.js" defer></script>
 </body>
 </html>
