--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </header>
   <div class="container">
     <button id="rollButton">Let's roll!</button>
-    <div id="loading" class="loading" style="display: none;">Ищем ваш фильм...</div>
+    <div id="loading" class="loading" style="display: none;"</div>
     <div id="errorMessage" class="error"></div>
     <div id="movieCard" class="card" style="display: none;">
       <img id="moviePoster" alt="Постер фильма" />
