--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <p><strong>Год:</strong> <span id="movieYear"></span></p>
         <p><strong>Рейтинг:</strong> <span id="movieRating"></span></p>
         <p id="movieOverview"></p>
+        <button id="readMoreButton" class="read-more" style="display: none;">Читать далее</button>
       </div>
     </div>
   </div>
