--- a/index.html
+++ b/index.html
@@ -2,22 +2,22 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>IMDB Randomizer</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
-    <button id="rollButton">Let's roll!</button>
+    <button id="rollButton">Сгенерировать фильм</button>
     <div id="errorMessage" class="error"></div>
     <div id="movieCard" class="card" style="display: none;">
+      <div id="imageCarousel" class="carousel"></div>
       <img id="moviePoster" alt="Постер фильма" />
       <div class="info">
         <h2 id="movieTitle"></h2>
         <p><strong>Год:</strong> <span id="movieYear"></span></p>
         <p><strong>Рейтинг:</strong> <span id="movieRating"></span></p>
         <p id="movieOverview"></p>
-        <button id="readMoreButton" class="read-more" style="display: none;">Читать далее</button>
       </div>
     </div>
   </div>
