--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <div class="swiper-button-prev"></div>
       </div>
       <div class="info">
+        <img id="moviePoster" alt="Постер фильма" class="movie-poster">
         <h2 id="movieTitle"></h2>
         <p><strong>Год:</strong> <span id="movieYear"></span></p>
         <p><strong>Рейтинг:</strong> <span id="movieRating"></span></p>
@@ -38,4 +39,3 @@
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 </body>
 </html>
-
