--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
 </head>
 <body>
   <div class="container">
-    <button id="rollButton">Let's roll!</button>
+    <button id="rollButton">Roll</button>
     <div id="errorMessage" class="error"></div>
     <div id="movieCard" class="card" style="display: none;">
-      <img id="moviePoster" alt="Постер фильма" class="movie-poster">
+      <img id="moviePoster" alt="Постер фильма" class="movie-poster"/>
       <div class="info">
         <h2 id="movieTitle"></h2>
         <p><strong>Год:</strong> <span id="movieYear"></span></p>
         <p><strong>Рейтинг:</strong> <span id="movieRating"></span></p>
         <p id="movieOverview"></p>
+        <a id="movieLink" href="" target="_blank" class="read-more">Читать далее</a>
       </div>
     </div>
   </div>
