--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div class="container">
+    <div id="tapHint" class="tap-hint">Tap to see</div>
     <div id="errorMessage" class="error"></div>
     <div id="movieCard" class="card" style="display: none;">
       <img id="moviePoster" alt="Постер фильма" class="movie-poster"/>
