--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>IMDB Randomizer</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="container">
-    <div id="tapHint" class="tap-hint">Tap to see</div>
+    <div id="tapToSee" class="tap-to-see">Tap to see</div>
     <div id="errorMessage" class="error"></div>
     <div id="movieCard" class="card" style="display: none;">
       <img id="moviePoster" alt="Постер фильма" class="movie-poster"/>
