--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>IMDB Randomizer</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
-    <div id="tapToSee" class="tap-to-see">Tap to see</div>
+    <div id="swipeToSee" class="tap-to-see">Swipe to see</div>
     <div id="errorMessage" class="error"></div>
     <div id="movieCard" class="card" style="display: none;">
       <img id="moviePoster" alt="Постер фильма" class="movie-poster"/>
