--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </svg>
           </div>
           <img id="moviePoster" class="movie-poster" alt="Постер фильма" />
-          <div class="movie-title-large" id="movieTitleLarge"></div>
+          <h2 id="movieTitle" class="movie-title"></h2>
           <div class="info">
             <p class="meta"><span id="movieYear"></span> • <span id="movieGenres"></span> <span id="movieRating" class="rating"></span></p>
             <p id="movieOverview"></p>
