--- a/index.html
+++ b/index.html
@@ -37,7 +37,12 @@
           <img id="moviePoster" class="movie-poster" alt="Постер фильма" />
           <h2 id="movieTitle" class="movie-title"></h2>
           <div class="info">
-            <p class="meta"><span id="movieYear"></span> • <span id="movieGenres"></span> <span id="movieRating" class="rating"></span></p>
+            <p class="meta">
+              <span id="movieYear"></span>
+              <span class="dot">•</span>
+              <span id="movieGenres"></span>
+              <span id="movieRating" class="rating"></span>
+            </p>
             <p id="movieOverview"></p>
             <a id="movieLink" href="" target="_blank" class="read-more">Подробнее</a>
           </div>
