--- a/index.html
+++ b/index.html
@@ -30,16 +30,18 @@
       <main>
         <div id="movieCard" class="card fade">
           <img id="moviePoster" class="movie-poster" alt="Постер фильма" />
-          <h2 id="movieTitle" class="movie-title"></h2>
-          <div class="info">
-            <p class="meta">
-              <span id="movieYear"></span>
-              <span class="dot">•</span>
-              <span id="movieGenres"></span>
-              <span id="movieRating" class="rating"></span>
-            </p>
-            <p id="movieOverview"></p>
-            <a id="movieLink" href="" target="_blank" class="read-more">Подробнее</a>
+          <div class="movie-info-container">
+            <h2 id="movieTitle" class="movie-title"></h2>
+            <div class="info">
+              <p class="meta">
+                <span id="movieYear"></span>
+                <span class="dot">•</span>
+                <span id="movieGenres"></span>
+                <span id="movieRating" class="rating"></span>
+              </p>
+              <p id="movieOverview"></p>
+              <a id="movieLink" href="" target="_blank" class="read-more">Подробнее</a>
+            </div>
           </div>
         </div>
         
