--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
                 <span id="movieGenres"></span>
                 <span id="movieRating" class="rating"></span>
               </p>
-              <p id="movieOverview"></p>
+              <p id="movieOverview" class="overview-short"></p>
+              <p id="movieOverviewFull" class="overview-full" style="display: none;"></p>
+              <span id="readMore" class="read-more-toggle">Показать больше</span>
               <a id="movieLink" href="" target="_blank" class="read-more">Подробнее</a>
             </div>
           </div>
@@ -54,8 +56,8 @@
             </span>
             Жанры
           </button>
-          <button id="newBtn" class="control-btn">
-            Новый
+          <button id="openLinkBtn" class="control-btn">
+            Перейти
           </button>
         </div>
         
