--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="welcomeScreen" class="welcome">
       <img src="https://upload.wikimedia.org/wikipedia/commons/6/69/IMDB_Logo_2016.svg" alt="IMDb Logo" class="imdb-logo-large" />
       <h1>IMDb РАНДОМАЙЗЕР</h1>
-      <p>Добро пожаловать! Нажмите в любом месте, чтобы начать получать случайные фильмы с IMDb. Вы можете фильтровать по жанрам.</p>
+      <p>Добро пожаловать! Нажмите в любом месте, чтобы начать получать случайные фильмы с IMDb. Вы можете фильтровать фильмы по жанрам.</p>
       <button id="startBtn" class="primary">Начать</button>
     </div>
 
@@ -23,7 +23,7 @@
         </div>
         <div class="logo">
           <img src="https://upload.wikimedia.org/wikipedia/commons/6/69/IMDB_Logo_2016.svg" alt="IMDb Logo" class="imdb-logo" />
-          <span class="randomizer-text">РАНДОМАЙЗЕР</span>
+          <span class="randomizer-text">RANDOMIZER</span>
         </div>
       </header>
       
